# pmpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  hello.py  main.cu  pyproject.toml  pyrightconfig.json
notes/: accessing_multidim_arrays.md  cmake_guide.md  triton_2d_offsets.md  triton_advanced_internals.md  triton_advanced_kernels.md  triton_autotuning.md  triton_broadcasting_masking.md  triton_constexpr_guide.md  triton_debugging.md  triton_fundamentals.md  triton_fused_kernels_explained.md  triton_mastery_resources.md  triton_operations.md  triton_patterns.md  triton_roadmap.md  warp_scheduling.md
src/cuda/batched_transfer/: CMakeLists.txt  main.cu
src/cuda/cuda_events/: CMakeLists.txt  main.cu
src/cuda/cuda_graphs/: CMakeLists.txt  main.cu
src/cuda/cuda_streams/: CMakeLists.txt  main.cu
src/cuda/fused_ops/: CMakeLists.txt  main.cu
src/cuda/grayscale/: CMakeLists.txt  main.cu
src/cuda/image_blur/: CMakeLists.txt  main.cu
src/cuda/matmul/: CMakeLists.txt  main.cu
src/cuda/parallel_scan/: CMakeLists.txt  main.cu
src/cuda/programmatic_launch/: CMakeLists.txt  main.cu
src/cuda/reduction/: CMakeLists.txt  README.md  main.cu
src/cuda/thrust_intro/: CMakeLists.txt  main.cu
src/cuda/tiled_matmul/: CMakeLists.txt  main.cu
src/cuda/vector_add/: CMakeLists.txt  main.cu
src/triton/grayscale_kernel/: README.md  grayscale_kernel.py
src/triton/matmul_kernel/: README.md  matmul_kernel.py
src/triton/reduction_kernel/: README.md  reduction_kernel.py
src/triton/triton_relu/: README.md  relu_kernel.py
src/triton/vector_addition/: README.md  vector_addition.py
