[project]
name = "pmpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "triton>=3.5.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]
